--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
     ],
     "minimum-stability": "dev",
     "autoload": {
-        "psr-4": {
-            "QueryCommon\\": "src/"
-        }
+        "classmap": [
+            "src/"
+        ]
     },
     "extra": {
         "laravel": {
